@@ -12,12 +12,16 @@ DIST README-3.8.5.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4ca
 DIST README-3.8.6.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.8.7.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST README-3.8.8.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
+DIST README-3.9.0.BFQ 9035 SHA256 e2137a2e75e08312512be449d91c0892a9b44847fab4cafbe1ae46d06e582cb9 SHA512 37ca3cb680e3cc1f3504f0e32407b68dbca495344d7f87745f631a68298d4bbb60f0169d0d74fee9b617e754a5d456e71d5be9e7351a40f38f0cbb877f1ee95e WHIRLPOOL 92521161796f2256de0024945c78463af528c5f351271bc728ba5fb3845d728609b17b87decc94331def1fc57d9c5b81879498e1a36c31cc66d33cd0276cb75f
 DIST aufs-sources-3.8_p20130318.tar.xz 143300 SHA256 1573e49b0055ceb78d862ee656b25f10469c2219897a2de6689850289e723e80 SHA512 a63f43dc49ea9ae2092171590041bd052ace8755b7b8fa40c825a9478a5b9ad01158205c2eacb81bb2281a8973ff5d44adfd2874bf18b38d19f13120d8a266ad WHIRLPOOL bb540029d2541f9c0215350073ec7e307297ce9a90493e6bbeb106e7eb61e05df35334bd640eb5d34c935daa277ac84145a537e76d1aa3fb8eba2b916d5a461e
 DIST aufs-sources-3.8_p20130325.tar.xz 143352 SHA256 b278d941bcf3c2555ff15158982add3e8dd2216e575cae11bcb56b6e409c2aec SHA512 326cad5e90c5e32e603519c8a555fd08751cdcf67625ed419c1059e1cd967ae41461954b6433c05d5c0c0c83e206093b7f41fee05483bc013dd3158d418bc8cc WHIRLPOOL 471f7fc551e28cd44f9f3a1913426b0f6c7d383b7ec49faba1852fc23cc01aa94a92aacb604bb9d8a28bfc37890370cbbd013ba7a3755000fa3748b4cddb63e2
 DIST aufs-sources-3.8_p20130401.tar.xz 143368 SHA256 3ae9001450a44ae42eebfbbf542ebe977ae2c65f466eb2374bf203241829159d SHA512 46b8271a6042a13c76ee97f692a855c796545c89e2e41abb05288c605f965ee8bb2fbc2496e4e317ebedbf50623cddf9eb1596ffa53c1405db2a939bbbb072cd WHIRLPOOL ab833ea22d7fd00ca43c0332d7c528c1eba0d0fa3efbf3ba0e41fe72233627b3717a2ec1bc9d92629fb8060673afab14e894e6acd1355161d47d9736fd7b9389
 DIST aufs-sources-3.8_p20130422.tar.xz 144844 SHA256 c77daec1e71663e935eae79c20fef1b26b59e9bd46efde162f91b0c6c0078f19 SHA512 c22c7a0e1cbba529059d4f8e0821c92d6789487a9260b16938470c012ffd3d11d34ff8c5c0a133914247fe1a9af60fc8ffd35dbce55fbec8cf319aaa2f46c515 WHIRLPOOL ee32e6deb34d8f4be38781e815a083b9b5ca90fb3d09daab7640b81c00a09c9b95eb03aa176f931fc1692bcdeadb4fcd49cfb06d9ea5edc2c07be58923bb6903
+DIST aufs-sources-3.x_p20130429.tar.xz 144880 SHA256 39f11007cca56805834394ce192a7dfde56006883fb9460de796f602bd5be87b SHA512 cff5bd08e4427bf9bbe393518e7c76c20b2819806ae0b3f3b544a92c73b02c5d3cf1fc1925d8e90871662e4a57b1c8a8e3c29aedc82400378cde37f0c1cae113 WHIRLPOOL 9352af36f7d606ecd0de82189d5f398475c9655a1d6465d3e6afc2c014e93da71996db62899d897fe5bf1655eed21a3f86872bf85154e55d45dbda417fe1811e
 DIST deblob-3.8 113867 SHA256 883e8f003cabd9168659b4a6c2549bf22f64b8dc7ca9ff106335cfdff23b890c SHA512 acdaecb5a371489f8d0c2cea4776584eb4a76db0ea5dafc363881f2c5bbccd212d98429c2a559e697f0485329d51f1c01ba2f6c82ec703ad6bca9b8d9097a452 WHIRLPOOL 40c723ad41434aef0d30ee5e0ebcd5476778c70bf82043241522ea389a3d5a66a5cd0480722f019daf3eba97a0f30eade1741af0979be956644cfb3e24ee90bc
+DIST deblob-3.9 116031 SHA256 0fb17070d5aaf226fca39f70df68b7d482e4f803e0ef974626440a28c26b5dc3 SHA512 e014add3728dc3fa0b938f3849ccba60e82354a811eefe6761036aa5e5b7bda39960758bb918506ed3cd0758360729144304227ab2cc3f5489813204f0053d3d WHIRLPOOL 4e65c3a6ba5dd5d850567fcd347167245b527b098ffa390bf0e9fb9778ddb06cd48553f697e2fe7cb793714b520dbb5b90b9948a339663a315e299272aca09ef
 DIST deblob-check-3.8 539625 SHA256 df1f7ebc09f93ec51c0d3755b5454adcdd271e428573014d13f58638760863a2 SHA512 1c27b2df8aedd93da153d8dade37384e59862dac2eab948802744fb1c5cdc7d141cb2d971bbc448e723f15c14f1646a1cc695f20e64150b26dc26746601d1d17 WHIRLPOOL a1354cfcad7d40e8e811882f2715a71f36bb18c99c6c5277b18aef7f738c41bbf5c7099735b6de4a37b22868dbf96a5405d0b21c16a5709d70a1d0b082a57594
+DIST deblob-check-3.9 557345 SHA256 60d05db20e7b50919ca44487d05e8faa9cca830318bd8d96625f0f75b252eeed SHA512 6b857380d495261c4d356639157f99f3ca3412388fd3b1c72b566c3bb6453c5a22ab7716e3b24e64a9b63dab912b07baccccfd0fca806ac0e0620efeef777b6a WHIRLPOOL 877c2c9b813466f9aa5cfecdc9ab93247bd2cdead457c9e0bd97da49d042d0a52262f9b4f8e9c83e397b57c5bb5a8fe2b61bb5f44d5a178a579cc9fff990941a
 DIST genpatches-3.8-10.base.tar.xz 223324 SHA256 277635e5643a68ef960b199f89c96676f76822f228232e1d1303bd4e26604a3e SHA512 98358376ae9acdb800df1c5b30888b6fee0026db3b3a113df159ab2eb42762479af485d7e138ab867b6baa4b33ab0c0f3a109fe59e44d7d24d0b79a15a2d6ce6 WHIRLPOOL e900ae75141d09f5b5235a55de9f199f3765549825ed47862a0bae98c622939bfef17ddc41a5d97679c5744f055013a18c7f581cfaabff44a57b8ad3b9393d5b
 DIST genpatches-3.8-10.extras.tar.xz 16568 SHA256 2ea61060a1525c4a8572af0b8258b222e84cc7fdc538b1b71b29784cea0dd424 SHA512 3601f4e2e5f428a18615a7b8f6c6ce00a8cc6476cb7a0d39665e66e2f49b89f091ec28ac01c6c1e288f68da1dedb23c64dec7bc1d93892e84350bdb83039fbc6 WHIRLPOOL 24d54663df1423f3110011d335d1128b55622daa306d70e6a010b42bb1859e5b479c8766f39e3a467096db6fcef08b37885f0d1d6e8fff2c58d5f31dfb593a4e
 DIST genpatches-3.8-11.base.tar.xz 232756 SHA256 8176334291bf7d9464339a4cc74cd8b153317ec2491d63a7532a42e259d5c6e5 SHA512 c9c9efd9f891f138d7306e419a04e0a4973537ec13c138d59a89470bc0b8dfb08971da411bf0ebda80bd94337f1989ed892865e0c709c82a35482247341a5b19 WHIRLPOOL a3a646d7a898cb77fcddd26d3bfe3c035983c777976237951a745c7331b82f8443e50f91e7a0e2b2d354d7d3506971432236ab8db31ac3f41bd4555778b645b1
@@ -30,8 +34,11 @@ DIST genpatches-3.8-8.base.tar.xz 169848 SHA256 6155e2165bada1247947095db09e37c5
 DIST genpatches-3.8-8.extras.tar.xz 16568 SHA256 2ea61060a1525c4a8572af0b8258b222e84cc7fdc538b1b71b29784cea0dd424 SHA512 3601f4e2e5f428a18615a7b8f6c6ce00a8cc6476cb7a0d39665e66e2f49b89f091ec28ac01c6c1e288f68da1dedb23c64dec7bc1d93892e84350bdb83039fbc6 WHIRLPOOL 24d54663df1423f3110011d335d1128b55622daa306d70e6a010b42bb1859e5b479c8766f39e3a467096db6fcef08b37885f0d1d6e8fff2c58d5f31dfb593a4e
 DIST genpatches-3.8-9.base.tar.xz 208468 SHA256 52295de742ba0371afd041e09ba280e2bcb2ed7b43bf5656de70a1509201e45d SHA512 a7bbb8e2e5140cf3012fd864d1ddea3c511ee6f226d8bea9be411c28be46873e3847d97719db78118eaf352e80cef8370d0b6d122426ec4a879abd862936ac1e WHIRLPOOL dd58bfc1dfbe7a1adecc18ac3f80997c1b37582870c7ad2f4f3f46af46542efce4e2f773010dd63e1b05dcd4be814a73283bcec64341aaa88f7a254a0f9a314b
 DIST genpatches-3.8-9.extras.tar.xz 16568 SHA256 2ea61060a1525c4a8572af0b8258b222e84cc7fdc538b1b71b29784cea0dd424 SHA512 3601f4e2e5f428a18615a7b8f6c6ce00a8cc6476cb7a0d39665e66e2f49b89f091ec28ac01c6c1e288f68da1dedb23c64dec7bc1d93892e84350bdb83039fbc6 WHIRLPOOL 24d54663df1423f3110011d335d1128b55622daa306d70e6a010b42bb1859e5b479c8766f39e3a467096db6fcef08b37885f0d1d6e8fff2c58d5f31dfb593a4e
+DIST genpatches-3.9-1.base.tar.xz 6512 SHA256 a324a42c052693483b2c2c53d4e9a80488ce2edaa7d881e18ac48f4ef6d5caaa SHA512 f59ddabf39296f9559c06c855a436cba4033b1fc1a082c2df48c283632dbbefad3458c065735fe90d8c1220c47fbafa1a803f390b00668cc13e8bd981e126a55 WHIRLPOOL 73e7e3f3e292ac0dca88ccfbce2a12fd8dd7bde08a36ff0c799ac84abe246189041c6415d8e70211dc98ed5f6bacd9ba421bd6d85726a35728fafaf7e47959de
+DIST genpatches-3.9-1.extras.tar.xz 16572 SHA256 6a93041aba5cfa6a45a348b654e129b4ba3659c87437217bbd65eb7a0a841827 SHA512 53c94f50f63d866a66869cfa0b2692c8b71ceb17a703424948d5a92c5390942667651e30fb4a662ba02147b70849cd7fb6bf71f0a4940f19ee1b392e684eb7a4 WHIRLPOOL cc2b332caffd5411c55ed9f7ddcde4c3275e6a68ec765f579e682e1e957b48a1c8601f9d607b4b4b3137af40ae0bcc091390ce733b2fdfaf95db00d77ce57370
 DIST lh-logo_linux_clut224.ppm 213668 SHA256 cf2ffc266799f3948131c30fe72870ff03afe9010643cc5a1c7b36cd1fe80562 SHA512 95b2a9b21f9125e178e32447f2310983427b37ffd4a861ce145d57e7daa828a38e51641069cdd191f4f2b303a887ae5b93ab0a40290a7976302683d633cdb315 WHIRLPOOL d0e693f86e964661090774350bdc4621f184bce20c7ad1e2fa62a941894feca5b709029a8f1ae398ca3f190f1eacd8c0e072f82e589cbae3dc2da565acca2297
 DIST linux-3.8.tar.xz 70989468 SHA256 e070d1bdfbded5676a4f374721c63565f1c969466c5a3e214004a136b583184b SHA512 10a7983391af907d8aec72bdb096d1cabd4911985715e9ea13d35ff09095c035db15d4ab08b92eda7c10026cc27348cb9728c212335f7fcdcda7c610856ec30f WHIRLPOOL 0c633854ad9c06df1b1d832aea9bbef76144ba88c8fccf6a3f8729101dc36838bcda6ccd444451cab19177608e7f7866f4f79cff1a8ef2bd0c893933d7f1f44c
+DIST linux-3.9.tar.xz 72104164 SHA256 60bc3e64ee5dc778de2cd7cd7640abf518a4c9d4f31b8ed624e16fad53f54541 SHA512 77fa521f42380409f8ab400c26f7b00e225cb075ef40834bb263325cfdcc3e65aef8511ec2fc2b50bbf4f50e226fb5ab07d7a479aaf09162adbbf318325d0790 WHIRLPOOL 668a8de30c7c3ccf6558cf0f29570f15e37ca7d599d1453afc3cab113d1b05fbd5b32646dd9ed798ceb61405a8754345da0740a53f467b825445028cda4bc698
 EBUILD lh-sources-3.8.10.ebuild 3436 SHA256 d9bd5f6e0f886bcc4c0bccaa28e17b030a3828c807e48c9e760dfe5d2ad78d9e SHA512 fb9949e69de007409aace3d4c4ffa34697cdda0410c9251b015aa5ec2be23acae05a4a5222015bf37f5e5275bf17fbe4eabfff1f1cb53534fa128db3d10b7e15 WHIRLPOOL 2313d89513ae557257118a106af926db48d367d76f763a87330193ceaa405e16e4fb5670d7e7d661a9020cb5cf838139e1724d54231eb212304832b8c968690f
 EBUILD lh-sources-3.8.4.ebuild 3454 SHA256 34f136ed2044bf86403a11b825210c464b686a4de6dcc0db733b1b24b26219c5 SHA512 336a50b0de967da080c3d02d4534a70dff16e9675a031f3d9a00afe84d84ea33de94a64d5177a4065d1eb6e78b8515aea062e6d3da82b6a7e48563dc31bd0e7e WHIRLPOOL 74b1aa91c7375813b82946d9f3fc218f6d2e348e5975e3e8180092ca1b45674488354db09900dfba92ff4754dd34dd6bd7f1b4d8a5d2926c5bb632efcdce34e7
 EBUILD lh-sources-3.8.5-r1.ebuild 3435 SHA256 00e4b765b18b1909e0cf767b72622ff1016f6f8497317297794d2d86d90f005f SHA512 c6681aff0110c0299a0c25af300e97edec6ec469e73fa0731a778607d641113782ebbbfaf6e08d01adc2fbdcf63239fa0a6039f64f2f5aa4cd6805d3ae688f7e WHIRLPOOL 85f5bc97b495815ea1950c7bf9b49a8a3e7cd21d46c472e713e80eba2c0d7100d519746a341c74ee66b5c59f6d406f028e7ee767b6a1423ed5ed4f780db93481
@@ -39,12 +46,13 @@ EBUILD lh-sources-3.8.5.ebuild 3454 SHA256 c94b11f65c3ff4aa6ad554d8a21fe05515194
 EBUILD lh-sources-3.8.6.ebuild 3435 SHA256 78e519c4fcf9cc0c5a828515e17cd6ff6967d4be6356e3459a8fc02ad88436b0 SHA512 2e409be7b8a7f747bdd181216b7abbcacdb66d5f37d8e8ee6ec4394bdf30007bf7c021262176d2021302c64e9e3026273e2119ab3fc6387d0c281ef57408b3b4 WHIRLPOOL 6106dd4521a1d5b41527cb573ac3ff77390c5bfc246278db9a1993129660fc9a9aca0d33d90a182e16ba3795490dbef179733a3771bf0c46a28c6ae7dcaae5dd
 EBUILD lh-sources-3.8.7.ebuild 3436 SHA256 8062fa3712fd3dcceb99e3ef47f584a57459a4a787e08d0ccb95ebc47b307098 SHA512 c9e7a3eb77e522fdbdf2ba48695c3ca8e9de5a9867d8793d440a0e4ea27018566a4e077730a2ce79cf2ded557255408da6c45ce9c5638d3fae1a0856d2cb2d99 WHIRLPOOL 67da45f7556b052a8185126f5eba27ef19f5cc96ea8a010abfd05f40c00a62c888569cd50a5d25c349c83eb0bd8e47f56b39370c61c9f3b92eaeb5dba4c1a2e1
 EBUILD lh-sources-3.8.8.ebuild 3436 SHA256 8a35a4453727037ceb498fb48328b2787396115fcecf71ff4ee5cb116ba94bbd SHA512 5a1ce3f1634771cec3fe65d98371fc720300d82269705005a8d16531c59205389c9b2f59488cc9c6e89641dfdb624d84fa4adba95767118f06b059834b908193 WHIRLPOOL 0afb085b59ef16830210b0445c16d146af404e6e0c0b6095dbad2c7587a407a3647f7a00cd68e448a252bfc83ab8c1f07e494d1ff0b349333c011dadede2a846
-MISC ChangeLog 7091 SHA256 9677c6bcaf7b6a2577f50027e815088f52b3800b130f7459ed3fb876af929c32 SHA512 185659994cfe2e97c342bc0e00a474dc26651e9cdeee8e4f4f994fede8523f345ea2e7e8a47eafbc8f7ba5adf2109de1092d7337520d6375b6f690428ce920bf WHIRLPOOL 7328ad043383c2a6581810c767858bb8db8f77f8424a93701ee710cf33e97ae6cbb394c1eeeeec652c8d746c935a49f6aef55850bf5fe6284b8a3906aba2bf64
+EBUILD lh-sources-3.9.0.ebuild 3390 SHA256 a23698d8f36cd18f5fb347f547d4610f515e8b6985f53c63a31aadf00577b3ac SHA512 c4ca3ed0f133ccb3071e5c74f10781d35d89a341f16202f097b44db34bfcb0879726f6f983a4ce27aae2d1b74b3f2a2e04f8cfbcfcbff4e38eb21e58b1a3a4d3 WHIRLPOOL e4ab2d8061bca9d2f1f482128f39a2af0ceb698ef2a15795a615e299c0bfaac9f68655ad5a690e8c1540c203b8e54d4569fb35a6859d2ad6ac0775ce8c5ffdf7
+MISC ChangeLog 7235 SHA256 7c26c64a295b3752bd277929c6a67f2466fb44c82e976544ed4c26c593369a82 SHA512 d0f0a3219217e2ac9b2f6777883df3048348457776794277d7df4249083e214cbef3a28718cd4a0f178e25cde5b10ae87a660cf90db8eeb903a0e57f3b9c7eb5 WHIRLPOOL 3d54be94c042d2f5a5e5b513c0eb23055e88538f90e6caeaf132a9b7695617cb3fdfc77ee38c7e9b8357ec3e0ab322ddd822c3f727e8641187cd25c0595fa72d
 MISC metadata.xml 621 SHA256 0e6f9ec38a6a9e192a6ab3cf83a409914c821b4dde2c1a15c28d558b6beef8bb SHA512 56744236081b425f4726c26c3b1a8e23297f1b7e4656ff4edbc2e6608a1150fb2e84ed1b58c5ab1318aebdab072392ef9d00160e2c766cc540bb6746bbe24bb3 WHIRLPOOL ed73cba1dee5abce3979c8f41094660b6eb046ef8c4d5820c060b863f54e6fb56a344c49630d8d03d400cba2dc2f4e5a35cd48c4ebdc4e9558511f2e9c9333bb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREKAAYFAlF7nVwACgkQgAnW8HDreRZyFwCfcttyd4sMg+NeUBxP/fPhqF8o
-KSkAn0rfsAZbNi/hb+8BwQqMjIwNqswF
-=BmBD
+iEYEAREKAAYFAlF/cZwACgkQgAnW8HDreRbbkgCghCsTgEEjLMLcPsp6Nwj8SSp9
+66kAoK2+UW6b4/H82gj4bWULIB//SvPe
+=uz/L
 -----END PGP SIGNATURE-----
