@@ -1,5 +1,10 @@
 
 
+*lh-sources-3.9.0 (30 Apr 2013)
+
+  30 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.9.0.ebuild:
+  Bump to new linux and aufs release
+
 *lh-sources-3.8.10 (27 Apr 2013)
 
   27 Apr 2013; Justin Lecher <jlec@gentoo.org> +lh-sources-3.8.10.ebuild:
